--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_HOST= mongodb+srv://Maksym:46XGGYIVKcdKScsi@cluster0.lbja4.mongodb.net/db-contacts?retryWrites=true&w=majority
+SECRET_KEY= 1fdgdfg2fxgx
