--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "express-query-boolean": "^2.0.0",
+    "gravatar": "^1.8.2",
     "http-errors": "^1.8.0",
+    "jimp": "^0.16.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "mongoose-paginate-v2": "^1.4.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^27.3.1",
     "nodemon": "2.0.7"
   }
 }
